<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/destiny_by_numbers_numerology_calculator"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/first_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_title"
        app:layout_constraintBottom_toTopOf="@id/et_first_name"/>

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:hint="@string/first_name_hint"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_first_name"
        app:layout_constraintBottom_toTopOf="@id/tv_middle_name"/>

    <TextView
        android:id="@+id/tv_middle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/middle_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_first_name"
        app:layout_constraintBottom_toTopOf="@id/et_middle_name"/>

    <EditText
        android:id="@+id/et_middle_name"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:hint="@string/middle_name_hint"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_middle_name"
        app:layout_constraintBottom_toTopOf="@id/tv_last_name"/>

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/last_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_middle_name"
        app:layout_constraintBottom_toTopOf="@id/et_last_name"/>

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:hint="@string/last_name_hint"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_last_name"
        app:layout_constraintBottom_toTopOf="@id/tv_birth_month"/>

    <TextView
        android:id="@+id/tv_birth_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/birth_month"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_last_name"
        app:layout_constraintBottom_toTopOf="@id/et_birth_month"/>

    <EditText
        android:id="@+id/et_birth_month"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:hint="@string/birth_month_mm"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_birth_month"
        app:layout_constraintBottom_toTopOf="@id/tv_birth_day"/>

    <TextView
        android:id="@+id/tv_birth_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/birth_day"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_birth_month"
        app:layout_constraintBottom_toTopOf="@id/et_birth_day"/>

    <EditText
        android:id="@+id/et_birth_day"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:hint="@string/birth_day_dd"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_birth_day"
        app:layout_constraintBottom_toTopOf="@id/tv_birth_year"/>

    <TextView
        android:id="@+id/tv_birth_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/birth_year"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_birth_day"
        app:layout_constraintBottom_toTopOf="@id/et_birth_year"/>

    <EditText
        android:id="@+id/et_birth_year"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:hint="@string/birth_year_yyyy"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_birth_year" />

    <Button
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_baseline_navigate_next_24"
        app:layout_constraintLeft_toRightOf="@id/et_birth_year"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>